# udp-multicast-chat

./: Cargo.toml  README.md  rustfmt.toml
src/: app.rs  main.rs
