[package]
name = "udp-multicast-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
socket2 = "0.5"

[dependencies.eframe]
version = "0.27"
default-features = false
features = ["default_fonts", "wgpu"]

[dependencies.tokio]
version = "1.27"
default-features = false
features = ["macros", "net", "parking_lot", "rt", "sync"]

[profile.release]
lto = true
strip = true
